--- a/ESMF/GOCART2G_GridComp/DU2G_GridComp/DU2G_instance_DU.rc
+++ b/ESMF/GOCART2G_GridComp/DU2G_GridComp/DU2G_instance_DU.rc
@@ -2,53 +2,36 @@
 # Resource file Dust parameters.
 #
 
+# LUTs for dust optical properties
 aerosol_radBands_optics_file:      ExtData/chemistry/AerosolOptics/v0.0.0/x/opticsBands_DU.v15_6.RRTMG.nc
 aerosol_monochromatic_optics_file: ExtData/chemistry/AerosolOptics/v0.0.0/x/optics_DU.v15_6.nc
 
-particle_radius_microns: 0.73 1.4 2.4 4.5 8.0
+# klid pressure -> aerosol is zeroed at lower pressures
+pressure_lid_in_hPa: 40.0
 
-radius_lower: 0.1 1.0 1.8 3.0 6.0
+# Particle properties for nominal five size bin configuration
+nbins: 5
+particle_radius_microns: 0.73 1.4 2.4 4.5 8.0     # [um]
+radius_lower: 0.1 1.0 1.8 3.0 6.0                 # [um]
+radius_upper: 1.0 1.8 3.0 6.0 10.0                # [um]
+particle_density: 2500. 2650. 2650. 2650. 2650.   # [kg m-3]
+fscav: 0.2  0.2  0.2  0.2  0.2                    # Scavenging efficiency per bin [km-1]
+molecular_weight: 0.1  0.1  0.1  0.1  0.1         # Molecular weight of species [kg mole-1]
+fnum: 2.45e14  3.28e13  6.52e12  9.89e11 1.76e11  # Number of particles per kg mass
 
-radius_upper: 1.0 1.8 3.0 6.0 10.0
-
-# units [kg/m-3]
-particle_density: 2500. 2650. 2650. 2650. 2650.
-
-# Threshold friction velocity parameter 'gamma'
-uts_gamma: 1.65e-4
-
-# Formulation of the clay and silt factor in K14 that modulates the strength of the dust emissions
-clayFlag: 1     # 0 - original K14, 1 - I&K2017, 2 - I&K2017
-
-# soil mosture scaling factor
-soil_moisture_factor: 0.8
-
-# clay fraction scaling factor
-soil_clay_factor: 1.0
+# Apply Maring settling velocity correction
+maringFlag: .true.
 
 # Wet Removal Scheme Option | gocart, ufs
 wet_removal_scheme: gocart ! default value
-
-# Scavenging efficiency per bin [km-1]
-fscav: 0.2  0.2  0.2  0.2  0.2
 
 # Rainout efficiency per bin for wet_removal_scheme == ufs
 fwet_ice: 0.8 0.8 0.8 1.0 1.0
 fwet_snow: 0.8 0.8 0.8 1.0 1.0
 fwet_rain: 0.8 0.8 0.8 1.0 1.0
 
-# Molecular weight of species [kg mole-1]
-molecular_weight: 0.1  0.1  0.1  0.1  0.1
 
-# Number of particles per kg mass
-fnum: 2.45e14  3.28e13  6.52e12  9.89e11 1.76e11
 
-# Maring settling velocity correction
-maringFlag: .true.
-
-nbins: 5
-
-pressure_lid_in_hPa: 40.0
 
 ## <<--- Select the Emission scheme -->>
 
