--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -59,4 +59,6 @@ jobs:
       run-mepo-develop: false
       build-target: '--target GOCART2G_GridComp'
       patch-esmf: true
+      # Note: you cannot build the install target with plain gocart
+      run-install: false
 
