--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -49,6 +49,8 @@ jobs:
       fixture-ref: release/MAPL-v3
       run-mepo-develop: false
       patch-esmf: true
+      # For some reason, Spack builds have weird install issues. For now, skip install.
+      run-install: false
 
   spack_build_gocart:
     uses: GEOS-ESM/CI-workflows/.github/workflows/spack_gcc_build.yml@project/geosgcm
