nitrate nodiff bug fixes.

--- a/ESMF/GOCART2G_GridComp/NI2G_GridComp/NI2G_StateSpecs.rc
+++ b/ESMF/GOCART2G_GridComp/NI2G_GridComp/NI2G_StateSpecs.rc
@@ -35,7 +35,7 @@ category: IMPORT
  EMI_NH3_OC   | kg m-2 s-1 | xy   | N    |           | SKIP    | ocean emissions
  EMI_NH3_RE   | kg m-2 s-1 | xy   | N    |           | SKIP    | resedential emissions
  EMI_NH3_TR   | kg m-2 s-1 | xy   | N    |           | SKIP    | transport emissions
- NITRATE_HNO3 | kg m-2 s-1 | xyz  | C    |           | SKIP    | nitrate hno3 emissions
+ NITRATE_HNO3 | mol mol-1  | xyz  | C    |           | SKIP    | nitrate hno3 offline field
  DU           | kg kg-1    | xyz  | C    | 5         | OPT     | Dust Mixing Ratio all bins
  SS           | kg kg-1    | xyz  | C    | 5         | OPT     | Sea Salt Mixing Ratio all bins
  SO4          | kg kg-1    | xyz  | C    |           | OPT     | Sulfate Mixing Ratio
