added GMI_HNO3 to ExtData.yaml.

--- a/ESMF/GOCART2G_GridComp/NI2G_GridComp/NI2G_GridComp_ExtData.yaml
+++ b/ESMF/GOCART2G_GridComp/NI2G_GridComp/NI2G_GridComp_ExtData.yaml
@@ -96,4 +96,8 @@ Exports:
     regrid: CONSERVE
     sample: NI2G_sample_0
     variable: NO3AN3
-
+  GMI_HNO3:
+    collection: /dev/null
+    regrid: CONSERVE
+    sample: NI2G_sample_2
+    variable: GMI_HNO3
