--- a/ESMF/GOCART2G_GridComp/DU2G_GridComp/DU2G_StateSpecs.rc
+++ b/ESMF/GOCART2G_GridComp/DU2G_GridComp/DU2G_StateSpecs.rc
@@ -13,7 +13,7 @@ category: IMPORT
  DU_LAI     | 1        | xy   | N    | OPT     | scheme == 'fengsha'                      | LAI
  DU_SAND    | 1        | xy   | N    | SKIP    | scheme == 'kok14' .OR. scheme == 'dead03' .OR. scheme == 'kok14simp' | volume_fraction_of_sand_in_soil
  DU_SILT    | 1        | xy   | N    | SKIP    | scheme == 'fengsha' .OR. scheme == 'kok14' | volume_fraction_of_silt_in_soil
- DU_CLAY    | 1        | xy   | N    | SKIP    | scheme == 'fengsha' .OR. scheme == 'kok14' .OR. scheme == 'dead03' | volume_fraction_of_clay_in_soil
+ DU_CLAY    | 1        | xy   | N    | SKIP    | scheme == 'fengsha' .OR. scheme == 'kok14' .OR. scheme == 'dead03' .OR. scheme == 'kok14simp' | volume_fraction_of_clay_in_soil
  DU_RDRAG   | m-1      | xy   | N    | OPT     | scheme == 'fengsha'                      | drag_partition
  DU_SSM     | 1        | xy   | N    | OPT     | scheme == 'fengsha'                      | sediment_supply_map
  DU_UTHRES  | m s-1    | xy   | N    | OPT     | scheme == 'fengsha'                      | surface_dry_threshold_velocity
@@ -32,7 +32,7 @@ category: IMPORT
  U10N       | m s-1    | xy   | N    | OPT     | scheme == 'kok14'                        | equivalent_neutral_10-meter_eastward_wind
  V10N       | m s-1    | xy   | N    | OPT     | scheme == 'kok14'                        | equivalent_neutral_10-meter_northward_wind
  AREA       | m^2      | xy   | N    | OPT     |                                          | agrid_cell_area
- USTAR      | m s-1    | xy   | N    | OPT     |                                          | equivalent_neutral_10-meter_northward_wind
+ USTAR      | m s-1    | xy   | N    | OPT     |                                          | surface_velocity_scale
  CN_PRCP    | kg/m^2/s | xy   | N    | OPT     |                                          | surface_conv._rain_flux_needed_by_land
  NCN_PRCP   | kg/m^2/s | xy   | N    | OPT     |                                          | Non-convective precipitation
  ZPBL       | m        | xy   | N    | OPT     |                                          | planetary_boundary_layer_height
