--- a/ESMF/GOCART2G_GridComp/DU2G_GridComp/CMakeLists.txt
+++ b/ESMF/GOCART2G_GridComp/DU2G_GridComp/CMakeLists.txt
@@ -2,7 +2,7 @@ esma_set_this ()
 
 esma_add_library (${this}
   SRCS ${this}Mod.F90
-  DEPENDENCIES GA_Environment MAPL MAPL.generic3g Chem_Shared2G Process_Library ESMF::ESMF NetCDF::NetCDF_Fortran
+  DEPENDENCIES GA_Environment MAPL MAPL.generic3g MAPL.utilities Chem_Shared2G Process_Library ESMF::ESMF NetCDF::NetCDF_Fortran
   TYPE SHARED)
 
 mapl_acg (
