--- a/ESMF/GOCART2G_GridComp/NI2G_GridComp/AMIP/NI2G_GridComp_ExtData.yaml
+++ b/ESMF/GOCART2G_GridComp/NI2G_GridComp/AMIP/NI2G_GridComp_ExtData.yaml
@@ -85,5 +85,8 @@ Exports:
     collection: /dev/null
   climNO3an3:
     collection: /dev/null
-
-
+  GMI_HNO3:
+    collection: /dev/null
+    regrid: CONSERVE
+    sample: NI2G_sample_2
+    variable: GMI_HNO3
