Update ExtData.yaml files to use science quality QFED3 emissions for x run testing

--- a/ESMF/GOCART_GridComp/CO_GridComp/CO_GridComp_ExtData.yaml
+++ b/ESMF/GOCART_GridComp/CO_GridComp/CO_GridComp_ExtData.yaml
@@ -15,6 +15,9 @@ Collections:
   CO_qfed2.emis_co.061.%y4%m2%d2.nc4:
     template: ExtData/chemistry/QFED/v2.5r1-nrt/sfc/0.1/Y%y4/M%m2/qfed2.emis_co.061.%y4%m2%d2.nc4
     valid_range: "2021-11-01T12:00/2025-01-01"
+  CO_qfed_emis_x3600y1800_so2.v3_2_0.%y4%m2%d2.nc4:
+    template: ExtData/chemistry/QFED/v3.2-sci/sfc/0.1/QFED/Y%y4/M%m2/qfed_emis_x3600y1800_co.v3_2_0.%y4%m2%d2.nc4
+    valid_range: "2025-11-27T12:00/2028-01-01"
 
 Samplings:
   CO_sample_0:
@@ -68,6 +71,7 @@ Exports:
   CO_BIOMASS:
     - {starting: "2014-12-01T12:00", collection: CO_qfed2.emis_co.006.%y4%m2%d2.nc4, linear_transformation: [0.0, 1.11], regrid: CONSERVE, sample: CO_sample_0, variable: biomass}
     - {starting: "2021-11-01T12:00", collection: CO_qfed2.emis_co.061.%y4%m2%d2.nc4, linear_transformation: [0.0, 1.11], regrid: CONSERVE, sample: CO_sample_0, variable: biomass}
+    - {starting: "2025-11-27T12:00", collection: CO_qfed_emis_x3600y1800_so2.v3_2_0.%y4%m2%d2.nc4, linear_transformation: [0.0, 1.11], regrid: CONSERVE, sample: CO_sample_0, variable: biomass}
   CO_BIOMASSnbas:
     collection: /dev/null
     regrid: CONSERVE
