--- a/ESMF/GOCART2G_GridComp/SU2G_GridComp/SU2G_GridComp_ExtData.yaml
+++ b/ESMF/GOCART2G_GridComp/SU2G_GridComp/SU2G_GridComp_ExtData.yaml
@@ -22,7 +22,10 @@ Collections:
   SU2G_qfed2.emis_so2.061.%y4%m2%d2.nc4:
     template: ExtData/chemistry/QFED/v2.5r1-nrt/sfc/0.1/Y%y4/M%m2/qfed2.emis_so2.061.%y4%m2%d2.nc4
     valid_range: "2021-11-01T12:00/2025-01-01"
-
+  SU2G_qfed_emis_x3600y1800_so2.v3_2_0.%y4%m2%d2.nc4:
+    template: ExtData/chemistry/QFED/v3.2-sci/sfc/0.1/QFED/Y%y4/M%m2/qfed_emis_x3600y1800_so2.v3_2_0.%y4%m2%d2.nc4
+    valid_range: "2025-11-27T12:00/2028-01-01"
+    
 Samplings:
   SU2G_sample_0:
     extrapolation: clim
@@ -70,6 +73,7 @@ Exports:
   SU_BIOMASS:
     - {starting: "2014-12-01T12:00", collection: SU2G_qfed2.emis_so2.006.%y4%m2%d2.nc4, linear_transformation: [0.0, 0.778], regrid: CONSERVE, sample: SU2G_sample_1, variable: biomass}
     - {starting: "2021-11-01T12:00", collection: SU2G_qfed2.emis_so2.061.%y4%m2%d2.nc4, linear_transformation: [0.0, 0.778], regrid: CONSERVE, sample: SU2G_sample_1, variable: biomass}
+    - {starting: "2025-11-27T12:00", collection: SU2G_qfed_emis_x3600y1800_so2.v3_2_0.%y4%m2%d2.nc4, linear_transformation: [0.0, 0.778], regrid: CONSERVE, sample: SU2G_sample_1, variable: biomass}
   SU_DMSO:
     collection: SU2G_DMSclim_sfcconcentration.x360_y181_t12.Lana2011.nc4
     regrid: CONSERVE
