Revert "Merge pull request #364 from GEOS-ESM/feature/pcolarco/merge_dev_chemistry"
This reverts commit c96359a24b02a733a95a730a043191cab7133995, reversing
changes made to b4b154cc55e6e0d2411358af59ebc1172725989b.

--- a/ESMF/GOCART2G_GridComp/SU2G_GridComp/AMIP/SU2G_instance_SU.rc
+++ b/ESMF/GOCART2G_GridComp/SU2G_GridComp/AMIP/SU2G_instance_SU.rc
@@ -59,8 +59,13 @@ sigma: -1  -1  2.03  -1
 
 # OH H2O2 NO3 from GMI Combined Stratosphere Troposphere (Lower case yes to enable)
 # -------------------------------------------------------------------------------------
-using_GMI: .false.
-disable_emissions: .false.
+#using_GMI_OH: no
+#using_GMI_NO3: no
+#using_GMI_H2O2: no
+export_H2O2: no
+using_GMI_OH: .false.
+using_GMI_NO3: .false.
+using_GMI_H2O2: .false.
 
 # SettlingSolver options
 # Options: 'gocart' or 'ufs'
