--- a/ESMF/GOCART2G_GridComp/SU2G_GridComp/SU2G_GridComp_ExtData.yaml
+++ b/ESMF/GOCART2G_GridComp/SU2G_GridComp/SU2G_GridComp_ExtData.yaml
@@ -23,7 +23,7 @@ Collections:
     template: ExtData/chemistry/QFED/v2.5r1-nrt/sfc/0.1/Y%y4/M%m2/qfed2.emis_so2.061.%y4%m2%d2.nc4
     valid_range: "2021-11-01T12:00/2025-01-01"
   SU2G_qfed_emis_x3600y1800_so2.v3_2_0.%y4%m2%d2.nc4:
-    template: ExtData/chemistry/QFED/v3.2-sci/sfc/0.1/QFED/Y%y4/M%m2/qfed_emis_x3600y1800_so2.v3_2_0.%y4%m2%d2.nc4
+    template: ExtData/chemistry/QFED/v3.2r1/sfc/0.1/QFED/Y%y4/M%m2/qfed_emis_x3600y1800_so2.v3_2_0.%y4%m2%d2.nc4
     valid_range: "2025-11-27T12:00/2028-01-01"
     
 Samplings:
