--- a/ESMF/GOCART_GridComp/CO_GridComp/AMIP/CO_GridComp_ExtData.yaml
+++ b/ESMF/GOCART_GridComp/CO_GridComp/AMIP/CO_GridComp_ExtData.yaml
@@ -15,6 +15,9 @@ Collections:
   CO_hfed.emis_co.x576_y361.%y4%m2.nc4:
     template: ExtData/chemistry/HFED/v1.0/Y%y4/M%m2/hfed.emis_co.x576_y361.%y4%m2.nc4
     valid_range: "1960-01-16T12:00/2000-12-16T12:00"
+  CO_qfed_emis_x3600y1800_co.v3_2_2.%y4%m2%d2.nc4:
+    template: ExtData/chemistry/QFED/v3.2r2/sfc/0.1/QFED/Y%y4/M%m2/qfed_emis_x3600y1800_co.v3_2_2.%y4%m2%d2.nc4
+    valid_range: "2023-03-01T12:00/2028-01-01"
 
 Samplings:
   CO_sample_0:
@@ -68,6 +71,7 @@ Exports:
   CO_BIOMASS:
     - {starting: "1960-01-16T12:00", collection: CO_hfed.emis_co.x576_y361.%y4%m2.nc4, linear_transformation: [0.0,1.11], regrid: CONSERVE, sample: CO_sample_0, variable: biomass}
     - {starting: "2000-03-01T00:00", collection: CO_qfed2.emis_co.061.%y4%m2%d2.nc4, linear_transformation: [0.0, 1.11], regrid: CONSERVE, sample: CO_sample_0, variable: biomass}
+    - {starting: "2023-03-01T00:00", collection: CO_qfed_emis_x3600y1800_co.v3_2_2.%y4%m2%d2.nc4, linear_transformation: [0.0, 1.11], regrid: CONSERVE, sample: CO_sample_0, variable: biomass}
   CO_BIOMASSnbas:
     collection: /dev/null
     regrid: CONSERVE
